# wasi-crun-deployer

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_push_test.sh  rhel-build.sh
.github/workflows/: validate.yaml
charts/wasi-crun-deployer/: Chart.yaml  README.md  rhel8-values.yaml  ubuntu20.yaml  values.yaml
charts/wasi-crun-deployer/templates/: NOTES.txt  _helpers.tpl  daemonset.yaml  job.yaml  openshift-scc.yaml  removejob.yaml  runtimeclass.yaml  serviceaccount.yaml
integration/: run-ibm.sh
manager/: Cargo.toml
manager/mocks/: in_config.toml  in_crio.conf  out_config.toml  out_crio.conf
manager/src/: lib.rs
